--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@form-create/designer",
-    "version": "1.1.2",
+    "name": "@form-create/designer-jeefast",
+    "version": "1.1.3",
     "description": "好用的vue可视化表单设计器组件",
     "type": "module",
     "unpkg": "./dist/index.umd.js",
@@ -39,12 +39,12 @@
         "locale",
         "dist"
     ],
-    "author": "xaboy",
+    "author": "yyq",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/xaboy/form-create-designer/issues"
+        "url": "https://github.com/yyqtimes/form-create-designer-jeefast"
     },
-    "homepage": "https://form-create.com",
+    "homepage": "https://github.com/yyqtimes/form-create-designer-jeefast",
     "publishConfig": {
         "access": "public"
     },
