--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@form-create/designer-jeefast",
+    "name": "@yyqtimes/form-create-designer-jeefast",
     "version": "1.1.4",
     "description": "好用的vue可视化表单设计器组件",
     "type": "module",
@@ -15,7 +15,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/xaboy/form-create-designer.git"
+        "url": "https://github.com/yyqtimes/form-create-designer-jeefast.git"
     },
     "keywords": [
         "表单设计器",
