--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@yyqtimes/form-create-designer-jeefast",
+    "name": "@yyqtimes/fcdesigner",
     "version": "1.1.4",
     "description": "好用的vue可视化表单设计器组件",
     "type": "module",
